--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "dependencies": {
-    "typescript": "^5.0.2"
-  },
   "name": "chrome-extension-app",
   "version": "1.0.0",
-  "main": "/src/index.ts",
+  "main": "/src/popup.js",
   "devDependencies": {
-    "ts-loader": "^9.4.2",
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.2",
     "webpack": "^5.76.2",
     "webpack-cli": "^5.0.1"
   },
