--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,9 @@
     "default_popup": "/src/popup/popup.html"
   },
   "background": {
-    "service_worker": "/src/background.js"
+    "service_worker": "/src/scripts/background.js"
   },
+  "options_page": "src/options/options.html",
   "permissions": ["storage", "activeTab"],
   "content_scripts": [
     {
