--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,14 @@
 {
   "manifest_version": 3,
   "name": "자연을 키우다: 깃헙 커밋 계산기 (Nurture Nature: Github Commit Count)",
-  "version": "1.0",
+  "version": "0.1.0",
   "description": "유저 아이디를 입력하며 깃헙의 기여도를 보여주는 확장 프로그램",
+  "icons": {
+    "16": "src/assets/icons/16x16-icon.png",
+    "32": "src/assets/icons/32x32-icon.png",
+    "48": "src/assets/icons/48x48-icon.png",
+    "128": "src/assets/icons/128x128-icon.png"
+  },
 
   "action": {
     "default_popup": "/src/popup/popup.html",
