--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "자연을 키우다: 깃헙 커밋 계산기 (Nurture Nature: Github Commit Count)",
+  "name": "자연을 키우다: 깃헙 기여도 & 커밋 확인",
   "version": "0.1.0",
-  "description": "유저 아이디를 입력하며 깃헙의 기여도를 보여주는 확장 프로그램",
+  "description": "자연을 키우다: 깃헙 기여도 & 커밋 확인\n유저 아이디를 입력하여 깃헙의 기여도를 보여주는 확장 프로그램입니다.",
   "icons": {
     "16": "src/assets/icons/16x16-icon.png",
     "32": "src/assets/icons/32x32-icon.png",
@@ -22,8 +22,7 @@
   "background": {
     "service_worker": "/src/scripts/background.js"
   },
-  "options_page": "src/options/options.html",
-  "permissions": ["storage", "activeTab", "commands"],
+  "permissions": ["storage"],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
