--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "DEV - 자연을 키우다: 깃헙 기여도 & 커밋 확인",
+  "name": "자연을 키우다: 깃헙 기여도 & 커밋 확인",
   "version": "0.1.1",
   "description": "자연을 키우다: 깃헙 기여도 & 커밋 확인\n유저 아이디를 입력하여 깃헙의 기여도를 보여주는 확장 프로그램입니다.",
   "icons": {
